cmake_minimum_required(VERSION 3.20)
project(cpp_tutorial)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_tutorial getting-started/linker-error.cpp getting-started/main.cpp clion-test/Student.cpp clion-test/Student.h clion-test/Employee.h clion-test/Employee.cpp sololearn/basics.cpp singleton/Singleton.cpp singleton/Singleton.h singleton/Main.cpp uml/A.cpp uml/A.h uml/B.cpp uml/B.h uml/C.cpp uml/C.h uml/D.cpp uml/D.h uml/Main.cpp)
