cmake_minimum_required(VERSION 3.20)
project(cpp_tutorial)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_tutorial getting-started/linker-error.cpp getting-started/main.cpp clion-test/Student.cpp clion-test/Student.h clion-test/Employee.h clion-test/Employee.cpp sololearn-course/basics.cpp singleton-pattern/Singleton.cpp singleton-pattern/Singleton.h singleton-pattern/Main.cpp uml-inheritance/A.cpp uml-inheritance/A.h uml-inheritance/B.cpp uml-inheritance/B.h uml-inheritance/C.cpp uml-inheritance/C.h uml-inheritance/D.cpp uml-inheritance/D.h uml-inheritance/Main.cpp memory-stack/Main.cpp stack-data-structure/Stack.cpp stack-data-structure/Stack.h stack-data-structure/Main.cpp math-expression-parser/Main.cpp socket-programming/notes/Client.cpp socket-programming/notes/Server.cpp socket-programming/client.cpp socket-programming/server.cpp)
